fix spacing of project list css

--- a/src/components/ProJectList/projectList.css
+++ b/src/components/ProJectList/projectList.css
@@ -23,7 +23,8 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 25px 0;
 }
 .s-container {
   margin: 20px;
@@ -34,7 +35,7 @@
   z-index: 99;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 700px) {
   .pl {
     display: flex;
     justify-content: center;
