--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -1,14 +1,14 @@
 .p {
-  width: 32%;
+  width: 30%;
   height: 40vh;
-  margin: 20px 10px;
+  margin: 0 auto;
   border: 2px solid rgb(243, 242, 242);
   border-radius: 10px 10px 0px 0px;
   overflow: hidden;
 }
 
 .p-browser {
-  height: 12%;
+  height: 50px;
   background-color: rgb(233, 212, 212);
   display: flex;
   align-items: flex-start;
@@ -61,7 +61,7 @@
   font-size: 14.5px;
 }
 
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1200px) {
   .p {
     width: 100%;
     height: 32vh;
